<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EnterImprovement">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtEnterImprovemet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:gravity="center_horizontal"
            android:text="@string/enter_improvement"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="20sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/txtStudentId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_student_s_id" />

        <EditText
            android:id="@+id/Student_ID2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:ems="10"
            android:hint="@string/enter_student_id"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="@color/purple_200" />

        <TextView
            android:id="@+id/txtChooseCourse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_course_for_improvement" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/txtImprovementMarks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/improvement_marks" />

        <EditText
            android:id="@+id/Improvement_Marks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:ems="10"
            android:hint="@string/enter_improvement_marks"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="@color/purple_200" />

        <Button
            android:id="@+id/submitImprovementButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Submit Improvement Marks" />
    </LinearLayout>
</FrameLayout>