<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EnterGrades">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleEnterGrades"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center_horizontal"
            android:text="@string/enter_grades1"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="24sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/student_name"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/tbStudentName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:ems="10"
            android:hint="@string/enter_student_s_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="@color/purple_200" />

        <EditText
            android:id="@+id/tbStudentID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:ems="10"
            android:hint="@string/enter_student_s_id"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            tools:ignore="LabelFor" />
        <TextView
            android:id="@+id/txtStudentProgram"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/program"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/Student_Program"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:ems="10"
            android:hint="@string/student_s_program"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="@color/purple_200"
            tools:ignore="LabelFor" />
        <TextView
            android:id="@+id/txtCourse1Marks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/course1_marks"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/Course1_Marks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:ems="10"
            android:hint="@string/course1_marks"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="@color/purple_200"
            tools:ignore="LabelFor,DuplicateSpeakableTextCheck" />
        <TextView
            android:id="@+id/txtCourse2Marks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/course2_marks"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/Course2_Marks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:ems="10"
            android:hint="@string/course2_marks"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="@color/purple_200"
            tools:ignore="LabelFor,DuplicateSpeakableTextCheck" />
        <TextView
            android:id="@+id/txtCourse3Marks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/course3_marks"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/Course3_Marks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:ems="10"
            android:hint="@string/course3_marks"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="@color/purple_200"
            tools:ignore="LabelFor,DuplicateSpeakableTextCheck" />
        <TextView
            android:id="@+id/txtCourse4Marks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/course4_marks"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/Course4_Marks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:ems="10"
            android:hint="@string/course4_marks"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="@color/purple_200"
            tools:ignore="LabelFor,DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/submitMarksButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit_marks" />

    </LinearLayout>
</FrameLayout>